ecommerce-fe/service.yml
apiVersion: v1
kind: Service
metadata:
  name: ecommerce-fe-service
  namespace: ecommerce
spec:
  internalTrafficPolicy: Cluster
  ipFamilies:
    - IPv4
  ipFamilyPolicy: SingleStack
  ports:
    - name: tcp
      port: 80
      protocol: TCP
      targetPort: 80
  selector:
    app: ecommerce-fe-deployment
  sessionAffinity: None
  type: ClusterIP
