ecommerce-fe/Ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecommerce-fe-ingress
  namespace: ecommerce
spec:
  ingressClassName: nginx
  rules:
    - host: ecommerce-fe-onpre.devopstest.vn
      http:
        paths:
          - backend:
              service:
                name: ecommerce-fe-service
                port:
                  number: 80
            path: /
            pathType: Prefix
